[package]
name = "mlalert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
tokio = "0.1.10"
voyager = "0.1"
diesel = { version = "2.0.0", features = ["postgres"] }
uuid = { version = "0.8.2", features = ["serde", "v4"]  }
